--- a/k8s/postgresql.yml
+++ b/k8s/postgresql.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: pg-pvc
 spec:
   accessModes:
     - ReadWriteOnce
@@ -12,43 +12,43 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: postgres
+  name: pg
   labels:
-    app: postgres
+    app: pg
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: postgres
+      app: pg
   template:
     metadata:
       labels:
-        app: postgres
+        app: pg
     spec:
       containers:
-        - name: postgres
-          image: postgres:latest
+        - name: pg
+          image: postgres
           ports:
             - containerPort: 5432
           envFrom:
             - configMapRef:
                 name: app-config
           volumeMounts:
-            - name: postgres-storage
+            - name: pg-storage
               mountPath: /var/lib/postgresql/data
       volumes:
-        - name: postgres-storage
+        - name: pg-storage
           persistentVolumeClaim:
-            claimName: postgres-pvc
+            claimName: pg-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: postgres-service
+  name: pg-service
 spec:
   type: ClusterIP
   selector:
-    app: postgres
+    app: pg
   ports:
     - protocol: TCP
       port: 5432
