--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,25 +67,25 @@ jobs:
           docker build -t ${{ secrets.REGISTRY }}/auth:latest ./auth_service
           docker push ${{ secrets.REGISTRY }}/auth:latest
 
-      - name: Build and Push product-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/product:latest ./product_service
-          docker push ${{ secrets.REGISTRY }}/product:latest
+      # - name: Build and Push product-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/product:latest ./product_service
+      #     docker push ${{ secrets.REGISTRY }}/product:latest
 
-      - name: Build and Push order-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/order:latest ./order_service
-          docker push ${{ secrets.REGISTRY }}/order:latest
+      # - name: Build and Push order-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/order:latest ./order_service
+      #     docker push ${{ secrets.REGISTRY }}/order:latest
 
-      - name: Build and Push admin-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/admin:latest ./admin_service
-          docker push ${{ secrets.REGISTRY }}/admin:latest
+      # - name: Build and Push admin-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/admin:latest ./admin_service
+      #     docker push ${{ secrets.REGISTRY }}/admin:latest
 
-      - name: Build and Push user-service
-        run: |
-          docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
-          docker push ${{ secrets.REGISTRY }}/user:latest
+      # - name: Build and Push user-service
+      #   run: |
+      #     docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
+      #     docker push ${{ secrets.REGISTRY }}/user:latest
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
