--- a/admin_service/Dockerfile
+++ b/admin_service/Dockerfile
@@ -8,3 +8,5 @@ RUN apt-get -y update
 RUN apt-get -y upgrade
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+
+CMD ["fastapi", "run", "./src/main.py"]
