--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v2
 
       - name: Login to ArvanCloud Registry
         uses: docker/login-action@v2
@@ -82,10 +82,10 @@ jobs:
       #     docker build -t ${{ secrets.REGISTRY }}/admin:latest ./admin_service
       #     docker push ${{ secrets.REGISTRY }}/admin:latest
 
-      # - name: Build and Push user-service
-      #   run: |
-      #     docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
-      #     docker push ${{ secrets.REGISTRY }}/user:latest
+      - name: Build and Push user-service
+        run: |
+          docker build -t ${{ secrets.REGISTRY }}/user:latest ./user_service
+          docker push ${{ secrets.REGISTRY }}/user:latest
 
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
@@ -97,51 +97,51 @@ jobs:
           mkdir -p $HOME/.kube
           echo "${{ secrets.KUBE_CONFIG }}" > $HOME/.kube/config
 
-      # - name: Check Kubeconfig
-      #   run: |
-      #     kubectl config current-context
-      #     kubectl cluster-info
+      - name: Check Kubeconfig
+        run: |
+          kubectl config current-context
+          kubectl cluster-info
 
-      # - name: Create .env file
-      #   run: |
-      #     cat <<EOF > .env
-      #     EXTERNAL_FASTAPI_PORT = ${{ vars.EXTERNAL_FASTAPI_PORT }}
-      #     INTERNAL_FASTAPI_PORT = ${{ vars.INTERNAL_FASTAPI_PORT }}
+      - name: Create .env file
+        run: |
+          cat <<EOF > .env
+          EXTERNAL_FASTAPI_PORT = ${{ vars.EXTERNAL_FASTAPI_PORT }}
+          INTERNAL_FASTAPI_PORT = ${{ vars.INTERNAL_FASTAPI_PORT }}
 
-      #     # Base URLs
-      #     AUTH_BASE_URL = ${{ vars.AUTH_BASE_URL }}
-      #     PRODUCT_BASE_URL = ${{ vars.PRODUCT_BASE_URL }}
-      #     ORDER_BASE_URL = ${{ vars.ORDER_BASE_URL }}
+          # Base URLs
+          AUTH_BASE_URL = ${{ vars.AUTH_BASE_URL }}
+          PRODUCT_BASE_URL = ${{ vars.PRODUCT_BASE_URL }}
+          ORDER_BASE_URL = ${{ vars.ORDER_BASE_URL }}
 
-      #     # DB Stack
-      #     AUTH_DB_STACK = ${{ vars.AUTH_DB_STACK }}
-      #     PRODUCT_DB_STACK = ${{ vars.PRODUCT_DB_STACK }}
-      #     ORDER_DB_STACK = ${{ vars.ORDER_DB_STACK }}
+          # DB Stack
+          AUTH_DB_STACK = ${{ vars.AUTH_DB_STACK }}
+          PRODUCT_DB_STACK = ${{ vars.PRODUCT_DB_STACK }}
+          ORDER_DB_STACK = ${{ vars.ORDER_DB_STACK }}
 
-      #     # MongoDB
-      #     MONGO_HOST = ${{ vars.MONGO_HOST }}
-      #     MONGO_PORT = ${{ vars.MONGO_PORT }}
-      #     MONGO_INITDB_ROOT_USERNAME = ${{ vars.MONGO_INITDB_ROOT_USERNAME }}
-      #     MONGO_INITDB_ROOT_PASSWORD = ${{ vars.MONGO_INITDB_ROOT_PASSWORD }}
-      #     MONGO_INITDB_DATABASE = ${{ vars.MONGO_INITDB_DATABASE }}
+          # MongoDB
+          MONGO_HOST = ${{ vars.MONGO_HOST }}
+          MONGO_PORT = ${{ vars.MONGO_PORT }}
+          MONGO_INITDB_ROOT_USERNAME = ${{ vars.MONGO_INITDB_ROOT_USERNAME }}
+          MONGO_INITDB_ROOT_PASSWORD = ${{ vars.MONGO_INITDB_ROOT_PASSWORD }}
+          MONGO_INITDB_DATABASE = ${{ vars.MONGO_INITDB_DATABASE }}
 
-      #     # PostgreSQL
-      #     POSTGRES_HOST = ${{ vars.POSTGRES_HOST }}
-      #     POSTGRES_PORT = ${{ vars.POSTGRES_PORT }}
-      #     POSTGRES_USER = ${{ vars.POSTGRES_USER }}
-      #     POSTGRES_PASSWORD = ${{ vars.POSTGRES_PASSWORD }}
-      #     POSTGRES_DB = ${{ vars.POSTGRES_DB }}
+          # PostgreSQL
+          POSTGRES_HOST = ${{ vars.POSTGRES_HOST }}
+          POSTGRES_PORT = ${{ vars.POSTGRES_PORT }}
+          POSTGRES_USER = ${{ vars.POSTGRES_USER }}
+          POSTGRES_PASSWORD = ${{ vars.POSTGRES_PASSWORD }}
+          POSTGRES_DB = ${{ vars.POSTGRES_DB }}
 
-      #     # JWT
-      #     JWT_SECRET = ${{ vars.JWT_SECRET }}
-      #     JWT_ALGORITHM = ${{ vars.JWT_ALGORITHM }}
-      #     JWT_EXPIRATION_MINUTES = ${{ vars.JWT_EXPIRATION_MINUTES }}
-      #     JWT_REFRESH_EXPIRATION_MINUTES = ${{ vars.JWT_REFRESH_EXPIRATION_MINUTES }}
-      #     EOF
+          # JWT
+          JWT_SECRET = ${{ vars.JWT_SECRET }}
+          JWT_ALGORITHM = ${{ vars.JWT_ALGORITHM }}
+          JWT_EXPIRATION_MINUTES = ${{ vars.JWT_EXPIRATION_MINUTES }}
+          JWT_REFRESH_EXPIRATION_MINUTES = ${{ vars.JWT_REFRESH_EXPIRATION_MINUTES }}
+          EOF
 
-      # - name: Apply app-config ConfigMap from file
-      #   run: |
-      #     kubectl create configmap app-config --from-file=.env --dry-run=client -o yaml | kubectl apply -f -
+      - name: Apply app-config ConfigMap from file
+        run: |
+          kubectl create configmap app-config --from-file=.env --dry-run=client -o yaml | kubectl apply -f -
 
       # - name: Apply nginx ConfigMap from file
       #   run: |
