--- a/k8s/user.yml
+++ b/k8s/user.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: user
-          image: /user:latest
+          image: arvan-registry/user:latest
           ports:
             - containerPort: 8000
           envFrom:
